# sys-monitor-db

./: .gitignore  Dockerfile  README.md  README.ru.md  build.sh  build.spec  docker-build.sh  pyproject.toml  requirements.txt
src/: __main__.py  config.py  database.py  logger.py  main.py  translations.py
